# initial_own_rust

./: Cargo.toml  README.md  subscribers.db
migrations/: 20250413192534_subscribers.sql
src/: main.rs
src/appstate/: mod.rs
src/controllers/email/: mod.rs
src/controllers/email/data/: mod.rs
src/controllers/email/route/: mod.rs
src/controllers/subscriber/: mod.rs
src/controllers/subscriber/data/: mod.rs
src/controllers/subscriber/route/: mod.rs
