[package]
name = "initial_own_rust_project"
version = "0.1.0"
edition = "2024"

[dependencies]
app-state = "0.1.0"
axum = {version = "0.6.20", features = ["headers"]}
chrono = "0.4.40"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.44.2", features = ["full"] }
